# x402-hpke

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AAD.md  HEADERS.md  JWKS.md  SPEC.md  STREAMING.md  THREAT_MODEL.md
docs/KATs/: kat_stream_v1.json  kat_stream_v1_negative.json  kat_v1.json  kat_v1_negative.json
examples/client-node/: README.md  index.ts  package-lock.json  package.json
examples/client-python/: README.md  client.py
examples/express-server/: README.md  package-lock.json  package.json  server.ts
examples/fastapi-server/: README.md  app.py
monorepo/: cli.py
tools/: npm_runner.py  py_runner.py
