[tool.poetry]
name = "x402-hpke-monorepo"
version = "0.0.0"
description = "Local orchestration scripts for building and testing Node and Python packages"
authors = []
license = "MIT"
packages = [{ include = "monorepo" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[tool.poetry.scripts]
build-all = "monorepo.cli:build_all"
test-all = "monorepo.cli:test_all"
test-node = "monorepo.cli:test_node"
test-python = "monorepo.cli:test_python"
ci = "monorepo.cli:ci"
demo-node = "monorepo.cli:demo_node"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"